added checkout and confirmation
