# cse-shop/api/swagger/swagger.yaml
@@ -116,6 +116,43 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /order:
+    x-swagger-router-controller: order_handler
+    post:
+      description: Place an order
+      operationId: order
+      parameters:
+        - name: order
+          in: body
+          description: Product order
+          required: true
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+              trxID:
+                type: string
+              cart:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    slug:
+                      type: string
+                    quantity:
+                      type: number
+                    color:
+                      type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/OrderResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 
@@ -145,6 +182,12 @@ definitions:
               type: string
             image:
               type: string
+  OrderResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
   ProductResponse:
     properties:
       message:
@@ -172,6 +215,7 @@ definitions:
             type: array
             items:
               type: string
+  
   SignupResponse:
     required:
       - message
